# Nara

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/meshes/: sphere.fbx  suzanna.fbx
assets/shaders/: basic.frag.glsl  basic.vert.glsl  depth.frag.glsl  depth.vert.glsl  global.frag.glsl  global.vert.glsl  ibasic.frag.glsl  ibasic.vert.glsl
docs/: THANKS.md
source/: main.cpp
source/common/: Array.cpp  Array.h  File.cpp  File.h  Macros.h
source/loader/: DefaultTextureLoader.cpp  DefaultTextureLoader.h  FbxMeshLoader.cpp  FbxMeshLoader.h  GlhomeMeshLoader.cpp  GlhomeMeshLoader.h  MeshLoader.h  TextureLoader.h
source/logic/: CCamera.cpp  CCamera.h  CLabel.h  CMaterial.h  CMeshInstance.cpp  CMeshInstance.h  CTerrain.cpp  CTerrain.h  CTransform.cpp  CTransform.h  Component.h  Ecs.h  Entity.h  Game.cpp  Game.h  Node.h  System.h  UpdateRegister.h
source/renderer/: Args.h  Backend.cpp  Backend.h  BackendOgl.cpp  BackendOgl.h  BackendOgl33.cpp  BackendOgl33.h  BackendOgl46.cpp  BackendOgl46.h  Device.cpp  Device.h  Frame.cpp  Frame.h  RenderGraph.cpp  RenderGraph.h  Settings.cpp  Settings.h
source/tests/: CMakeLists.txt  TArray.cpp  TEcs.cpp  TMacros.h
source/tools/: build.sh  format.sh  tests.sh
